finished the readme