@@ -1,4 +1,26 @@
-# Project-1-2-Group-5
+# Group 5
+## Project 1-2
 
-Run Main.java (JavaFX required)
+Members: Martin Aviles, Lou Feiler, Marie Picquet, Sam Glassman, Yaroslav Tymofiienko, Tjardo Neis
 
+Overview
+---
+
+Our goal is to simulate the gravitational forces of celestial bodies and find launch parameters to launch a space probe to Titan.
+
+### How to run:
+
+1. Clone the repository
+2. Use command line to compile and run the Titan probe simulation.
+
+#### To compile:
+``cd`` to the src folder of the cloned repository
+
+``javac --module-path "C:\Users\user\path\to\javafx-sdk\lib" --add-modules javafx.controls,javafx.fxml *.java``
+
+
+#### To run:
+
+``java --module-path "C:\Users\samgl\Documents\javafx-sdk-16\lib" --add-modules javafx.controls,javafx.fxml Main``
+
+Use the controls to speed up, slow down, pause, zoom or rewind the trajectory.
